	  fragement to de-quoate certain strings from the Kconfig logic that
	  need to be used at path segments (Richard Cochran).
	* arch/arm/src/stm32/stm32_usbotghost.c:  The STM32 USB host driver only
	  works with debug turned on.  The problem appears to be that with debug
	  OFF, there are more NAKs occuring in more places than before and this
	  reveals a variety of errors.  This check in improves NAK robustness
	  for control transfers but does not resolve all of the issues.
	* configs/stm3220g-eval/*/defconfig:  Calibrated delay loop.  It had
	  never been calibrated was was way off.
	* sched/sem_holder.c: Add logic to handler some priority inheritance
	  cases when sem_post() is called from an interrupt handler.  The
	  logic is clearly wrong, but it is not known if this is the
	  cause of any known bugs.
	* lib/stdio/lib_perror():  Add perror().  Contributed by Kate.
	* lib/string/lib_strerror():  Add option CONFIG_LIBC_STRERROR that
	  is now required to enabled strerror().  Add an option
	  CONFIG_LIBC_STRERROR_SHORT that can be used to output shortened
	  strings by strerror().
	* arch/arm/src/stm32/stm32_usbotghost.c:  Finally... the USB OTG FS
	  appears to handle NAKing correctly is complete.
	* configs/stm32f4discovery/*:  Added and verifed support for USB OTG FS
	  host on the STM32F4Discovery board.
	* configs/*/defconfig: Remove configuration documentation from config
	  files.  It is redundant, error-prone, and difficult to maintain.
	  Configuration documentation is available in configs/README.txt for
	  common configurations and in configs/*/README.txt for board and MCU_
	  specific configurations.
	* configs/stm3240g-eval: Add USB host support.
	* sched/os_bring.c, configs/*/defconfig, tools/mkconfig.c, and others:  Added
	  configuration variable CONFIG_USER_ENTRYPOINT that may be used to change
	  the default entry from user_start to some other symbol.  Contributed by
	  Kate.